# JaegerNet

./: .gitignore  CMakeLists.txt  JaegerNet.sln  bootstrap.bat  build.bat
Client/: CMakeLists.txt
Client/lib/: CMakeLists.txt  ClientLib.cpp
Dependencies/installed/vcpkg/info/: asio_1.10.8_x64-windows.list  asio_1.10.8_x86-windows.list  protobuf_3.5.0-1_x64-windows.list  protobuf_3.5.0-1_x86-windows.list  sdl2_2.0.7-3_x64-windows.list  sdl2_2.0.7-3_x86-windows.list  tclap_1.2.1_x64-windows.list  tclap_1.2.1_x86-windows.list
Dependencies/installed/x64-windows/debug/lib/: libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib
Dependencies/installed/x64-windows/debug/lib/manual-link/: SDL2maind.lib
Dependencies/installed/x64-windows/debug/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
Dependencies/installed/x64-windows/include/google/protobuf/stubs/: platform_macros.h
Dependencies/installed/x64-windows/lib/: libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
Dependencies/installed/x64-windows/lib/manual-link/: SDL2main.lib
Dependencies/installed/x64-windows/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
Dependencies/installed/x64-windows/share/protobuf/: protobuf-config-version.cmake
Dependencies/installed/x86-windows/debug/lib/: libprotobuf-lited.lib  libprotobufd.lib  libprotocd.lib
Dependencies/installed/x86-windows/debug/lib/manual-link/: SDL2maind.lib
Dependencies/installed/x86-windows/debug/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
Dependencies/installed/x86-windows/lib/: libprotobuf-lite.lib  libprotobuf.lib  libprotoc.lib
Dependencies/installed/x86-windows/lib/manual-link/: SDL2main.lib
Dependencies/installed/x86-windows/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
Dependencies/installed/x86-windows/share/protobuf/: protobuf-config-version.cmake
Dependencies/protobuf-3.5.0/lib/: libprotobuf-lite.lib  libprotobuf-lited.lib
Dependencies/protobuf-3.5.0/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
Proto/: CMakeLists.txt  ConnectMessage.proto  JaegerNet.proto
Server/: CMakeCache.txt  CMakeLists.txt
Server/exe/: CMakeLists.txt  Module.cpp
Server/lib/: CMakeLists.txt  Lobby.cpp  LobbyManager.cpp  LobbyManager.h  MessageHandler.cpp  MessageHandler.h  Player.cpp  Player.h  Server.cpp  Server.h  ServerLib.cpp
Src/: CMakeLists.txt
Src/Client/: CMakeLists.txt
Src/Client/dll/: CMakeLists.txt  Factory.cpp  Module.cpp
Src/Client/exe/: CMakeLists.txt  Factory.cpp  Module.cpp
Src/Client/inc/: JaegerNetClient.h
Src/Client/lib/: CMakeLists.txt  Client.cpp  Client.h  Controller.cpp  Controller.h  InputListener.cpp  InputListener.h  Lobby.cpp  Lobby.h  MessageHandler.h  Player.cpp  Player.h  Session.cpp  Session.h
Src/Proto/: CMakeLists.txt  ConnectMessage.proto  ControllerInputMessage.proto  CreateLobbyMessage.proto  JaegerNet.proto
Src/Server/: CMakeLists.txt
Src/Server/dll/: CMakeLists.txt  Module.cpp
Src/Server/exe/: CMakeLists.txt  Module.cpp
Src/Server/inc/: JaegerNetServer.h
Src/Server/lib/: CMakeLists.txt  Lobby.cpp  Lobby.h  LobbyManager.cpp  LobbyManager.h  MessageHandler.h  Player.cpp  Player.h  Server.cpp  Server.h  Session.cpp  Session.h
Src/inc/: Constants.h  ErrorCodes.h  Event.h  JaegerNet_Types.h  Logging.h  NoCopy.h  Resource.h
